<resources>
    <string name="app_name">3.1P_Food_Parcels</string>
    <string name="main_title">My Favourite Foods</string>

    <array name="hamburger">
        <item name = "name">Hamburger</item>
        <item name = "description">Vegan hamburger with veggie pattie, lettuce, tomato and pickles</item>
    </array>

    <string-array name="icecream" >
        <item name = "name">Ice-Cream</item>
        <item name = "description">Ben and Jerries dariy free peanut butter and oreo ice cream</item>
    </string-array>

    <string-array name="bahnmi" >
        <item name = "name">Bahnmi</item>
        <item name = "description">Vietnamese baggquette served with various salads and meats</item>
    </string-array>

    <string-array name="dumplings" >
        <item name = "name">Dumpling</item>
        <item name = "description">Fried vegetable gyoza</item>
    </string-array>

    // COMMON LAYOUT LABELS
    <string name="name_label"><b>Name: </b></string>
    <string name="description_label"><b>Description: </b></string>
    <string name="url_label_label">URL: </string>
    <string name="keywords_label">Keywords: </string>
    <string name="data_obtained_label">Date Obtained: </string>
    <string name="who_obtained_label">Who Obtained: </string>
    <string name="rating_label">Rating: </string>
    <string name="share_label">Share: </string>
    <string name="submit_label">Submit</string>

    // META DATA FORM LAYOUT
    <string name="mdf_title">Image Data</string>


</resources>
