<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MetaDataForm">

<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal"
                android:text="@string/mdf_title"
                android:textSize="30dp"
                android:layout_weight="1"
                style="@style/LabelText"
                android:id="@+id/mdf_title"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/name_label"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/name_value"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/url_label_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/url_label"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_weight="0.7"
                android:text=""
                android:ems="10"
                android:id="@+id/url_value"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/keywords_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/keywords_label"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/keywords_value"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/data_obtained_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/date_obtained_label"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="date"
                android:text=""
                android:ems="10"
                android:id="@+id/date_obtained_value"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/who_obtained_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/who_obtained_label"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="textEmailAddress"
                android:text=""
                android:ems="10"
                android:id="@+id/who_obtained_value"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/rating_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/rating_label"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="number"
                android:text=""
                android:ems="10"
                android:id="@+id/rating_value"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/share_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/LabelText"
                android:id="@+id/share_label"/>
        <CheckBox

                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" android:id="@+id/share_checkbox"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/submit_label"
                style="@style/SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button"/>
    </TableRow>
</TableLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>